// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerTree matches snapshots using default properties. 1`] = `
<div
  className="rs-layer-tree"
>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Road sample layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Road sample layers Hide sublayer"
      >
        <div>
          Road sample layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Vienna Streets Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Vienna Streets Show sublayer"
        >
          <div>
            Vienna Streets
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Roads Seoul Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Roads Seoul Show sublayer"
        >
          <div>
            Roads Seoul
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Vector sample layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Vector sample layers Hide sublayer"
      >
        <div>
          Vector sample layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Points Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Points Samples Show sublayer"
        >
          <div>
            Points Samples
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Lines Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Lines Samples Show sublayer"
        >
          <div>
            Lines Samples
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Polygons Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Polygons Samples Show sublayer"
        >
          <div>
            Polygons Samples
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Other layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Other layers Hide sublayer"
      >
        <div>
          Other layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Countries Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Countries Show sublayer"
        >
          <div>
            Countries
          </div>
          <div
            className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="USA Population Density Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="USA Population Density Show sublayer"
        >
          <div>
            USA Population Density
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Switzerland Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Switzerland Show sublayer"
        >
          <div>
            Switzerland
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OpenTopoMap Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OpenTopoMap Show sublayer"
      >
        <div>
          OpenTopoMap
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Hot Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Hot Show sublayer"
      >
        <div>
          OSM Baselayer Hot
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Show sublayer"
      >
        <div>
          OSM Baselayer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayerTree matches snapshots when an item is hidden (different layer tree levels) 1`] = `
<div
  className="rs-layer-tree"
>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="Road sample layers Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Road sample layers Show sublayer"
      >
        <div>
          Road sample layers
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Other layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Other layers Hide sublayer"
      >
        <div>
          Other layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Countries Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Countries Show sublayer"
        >
          <div>
            Countries
          </div>
          <div
            className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="USA Population Density Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="USA Population Density Show sublayer"
        >
          <div>
            USA Population Density
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayerTree matches snapshots when an item is hidden. 1`] = `
<div
  className="rs-layer-tree"
>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OpenTopoMap Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OpenTopoMap Show sublayer"
      >
        <div>
          OpenTopoMap
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Hot Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Hot Show sublayer"
      >
        <div>
          OSM Baselayer Hot
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Show sublayer"
      >
        <div>
          OSM Baselayer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayerTree matches snapshots when classNames are used. 1`] = `
<div
  className="foo"
>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Road sample layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Road sample layers Hide sublayer"
      >
        <div>
          Road sample layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Vienna Streets Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Vienna Streets Show sublayer"
        >
          <div>
            Vienna Streets
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Roads Seoul Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Roads Seoul Show sublayer"
        >
          <div>
            Roads Seoul
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Vector sample layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Vector sample layers Hide sublayer"
      >
        <div>
          Vector sample layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Points Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Points Samples Show sublayer"
        >
          <div>
            Points Samples
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Lines Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Lines Samples Show sublayer"
        >
          <div>
            Lines Samples
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="radio"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Polygons Samples Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Polygons Samples Show sublayer"
        >
          <div>
            Polygons Samples
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Other layers Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Other layers Hide sublayer"
      >
        <div>
          Other layers
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item "
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Show layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Show layer"
        >
          <input
            checked={false}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Countries Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Countries Show sublayer"
        >
          <div>
            Countries
          </div>
          <div
            className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="USA Population Density Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="USA Population Density Show sublayer"
        >
          <div>
            USA Population Density
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={-1}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Switzerland Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Switzerland Show sublayer"
        >
          <div>
            Switzerland
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OpenTopoMap Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OpenTopoMap Show sublayer"
      >
        <div>
          OpenTopoMap
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item "
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Show layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Show layer"
      >
        <input
          checked={false}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Hot Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Hot Show sublayer"
      >
        <div>
          OSM Baselayer Hot
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-radio rs-radio"
        onKeyPress={[Function]}
        tabIndex={-1}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="radio"
        />
        <span />
      </label>
      <div
        aria-expanded={false}
        aria-label="OSM Baselayer Show sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="OSM Baselayer Show sublayer"
      >
        <div>
          OSM Baselayer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayerTree matches snapshots when items are always expanded 1`] = `
<div
  className="rs-layer-tree"
>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Expanded layer 2 (because of level 1) Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Expanded layer 2 (because of level 1) Hide sublayer"
      >
        <div>
          Expanded layer 2 (because of level 1)
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Visible layer 2.1 (as parent is expanded) Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Visible layer 2.1 (as parent is expanded) Show sublayer"
        >
          <div>
            Visible layer 2.1 (as parent is expanded)
          </div>
          <div
            className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={false}
          aria-label="Visible layer 2.2 (as parent is expanded) Show sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Visible layer 2.2 (as parent is expanded) Show sublayer"
        >
          <div>
            Visible layer 2.2 (as parent is expanded)
          </div>
          <div
            className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="rs-layer-tree-item rs-visible"
      style={
        Object {
          "paddingLeft": "0px",
        }
      }
    >
      <label
        aria-label="Hide layer"
        className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
        onKeyPress={[Function]}
        tabIndex={0}
        title="Hide layer"
      >
        <input
          checked={true}
          onClick={[Function]}
          readOnly={true}
          tabIndex={-1}
          type="checkbox"
        />
        <span />
      </label>
      <div
        aria-expanded={true}
        aria-label="Expanded layer 1 (because of level 1) Hide sublayer"
        className="rs-layer-tree-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Expanded layer 1 (because of level 1) Hide sublayer"
      >
        <div>
          Expanded layer 1 (because of level 1)
        </div>
        <div
          className="rs-layer-tree-arrow rs-layer-tree-arrow-expanded"
        />
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={true}
          aria-label="Expanded layer 1.1 (because of isAlwaysExpanded=true) Hide sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Expanded layer 1.1 (because of isAlwaysExpanded=true) Hide sublayer"
        >
          <div>
            Expanded layer 1.1 (because of isAlwaysExpanded=true)
          </div>
        </div>
      </div>
      <div>
        <div
          className="rs-layer-tree-item rs-visible"
          style={
            Object {
              "paddingLeft": "60px",
            }
          }
        >
          <label
            aria-label="Hide layer"
            className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
            onKeyPress={[Function]}
            tabIndex={0}
            title="Hide layer"
          >
            <input
              checked={true}
              onClick={[Function]}
              readOnly={true}
              tabIndex={-1}
              type="checkbox"
            />
            <span />
          </label>
          <div
            aria-expanded={true}
            aria-label="Expanded layer 1.1.1 (because of isAlwaysExpanded=true) Hide sublayer"
            className="rs-layer-tree-toggle"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title="Expanded layer 1.1.1 (because of isAlwaysExpanded=true) Hide sublayer"
          >
            <div>
              Expanded layer 1.1.1 (because of isAlwaysExpanded=true)
            </div>
          </div>
        </div>
        <div>
          <div
            className="rs-layer-tree-item rs-visible"
            style={
              Object {
                "paddingLeft": "90px",
              }
            }
          >
            <label
              aria-label="Hide layer"
              className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
              onKeyPress={[Function]}
              tabIndex={-1}
              title="Hide layer"
            >
              <input
                checked={true}
                onClick={[Function]}
                readOnly={true}
                tabIndex={-1}
                type="checkbox"
              />
              <span />
            </label>
            <div
              aria-expanded={false}
              aria-label="Visible layer 1.1.1.1 (as parent is expanded) Show sublayer"
              className="rs-layer-tree-toggle"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              title="Visible layer 1.1.1.1 (as parent is expanded) Show sublayer"
            >
              <div>
                Visible layer 1.1.1.1 (as parent is expanded)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="rs-layer-tree-item rs-visible"
        style={
          Object {
            "paddingLeft": "30px",
          }
        }
      >
        <label
          aria-label="Hide layer"
          className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
          onKeyPress={[Function]}
          tabIndex={0}
          title="Hide layer"
        >
          <input
            checked={true}
            onClick={[Function]}
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span />
        </label>
        <div
          aria-expanded={true}
          aria-label="Expanded layer 1.2 (because of isAlwaysExpanded=true) Hide sublayer"
          className="rs-layer-tree-toggle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          title="Expanded layer 1.2 (because of isAlwaysExpanded=true) Hide sublayer"
        >
          <div>
            Expanded layer 1.2 (because of isAlwaysExpanded=true)
          </div>
        </div>
      </div>
      <div>
        <div
          className="rs-layer-tree-item rs-visible"
          style={
            Object {
              "paddingLeft": "60px",
            }
          }
        >
          <label
            aria-label="Hide layer"
            className="rs-layer-tree-input rs-layer-tree-input-checkbox rs-checkbox"
            onKeyPress={[Function]}
            tabIndex={0}
            title="Hide layer"
          >
            <input
              checked={true}
              onClick={[Function]}
              readOnly={true}
              tabIndex={-1}
              type="checkbox"
            />
            <span />
          </label>
          <div
            aria-expanded={false}
            aria-label="Visible layer 1.2.1 (as parent is expanded) Show sublayer"
            className="rs-layer-tree-toggle"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title="Visible layer 1.2.1 (as parent is expanded) Show sublayer"
          >
            <div>
              Visible layer 1.2.1 (as parent is expanded)
            </div>
            <div
              className="rs-layer-tree-arrow rs-layer-tree-arrow-collapsed"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayerTree matches snapshots when no layers. 1`] = `
<div
  className="rs-layer-tree"
/>
`;

exports[`LayerTree matches snapshots when renderItem is used. 1`] = `
<div
  className="rs-layer-tree"
>
  <div>
    Road sample layers
  </div>
  <div>
    Vector sample layers
  </div>
  <div>
    Other layers
  </div>
  <div>
    OpenTopoMap
  </div>
  <div>
    OSM Baselayer Hot
  </div>
  <div>
    OSM Baselayer
  </div>
</div>
`;
